--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -3,18 +3,18 @@
 #‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾#
 
 # Name
-NAME	= BraiiiiiiinnnzzzZ
+NAME	= HI_THIS_IS_BRAIN
 
 #______________________________________________________________________________#
 ############################### Compiler #######################################
 #‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾#
-
 # Compiler
 CC = c++
 
-RM = rm -rf
 # Compiler Flags
 CFLAGS = -Wall -Wextra -Werror -std=c++98
+
+RM = rm -rf
 
 # Reset
 NC = \033[0m
@@ -47,7 +47,7 @@ SRC_DIR		=	srcs/
 OBJ_DIR		=	objs/
 INC_DIR		=	include/
 
-SRC_FILES	=	main.cpp Zombie.cpp newZombie.cpp randomChump.cpp
+SRC_FILES	=	main.cpp
 OBJ_FILES	=	$(SRC_FILES:.cpp=.o)
 
 #paths
